--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -103,15 +103,31 @@
         background-color: rgb(var(--color-background));
       }
 
-      :root {
-        --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
-        --font-body-style: {{ settings.type_body_font.style }};
-        --font-body-weight: {{ settings.type_body_font.weight }};
-        --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
+      @font-face {
+        font-family: 'CHANEY';
+        src: url("https://cdn.shopify.com/s/files/1/0644/0180/1367/files/CHANEY-Regular.woff2?v=1726253549") format('woff2');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
 
-        --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
-        --font-heading-style: {{ settings.type_header_font.style }};
-        --font-heading-weight: {{ settings.type_header_font.weight }};
+      @font-face {
+        font-family: 'ArchivoNarrow';
+        src: url("https://cdn.shopify.com/s/files/1/0644/0180/1367/files/ArchivoNarrow-Regular.woff2?v=1726260985") format('woff2');
+        font-weight: bold;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      :root {
+        --font-body-family: "ArchivoNarrow", sans-serif;
+        --font-body-style: "normal";
+        --font-body-weight: "normal";
+        --font-body-weight-bold: 500;
+
+        --font-heading-family: "CHANEY", sans-serif;
+        --font-heading-style: "normal";
+        --font-heading-weight: "normal";
 
         --font-body-scale: {{ settings.body_scale | divided_by: 100.0 }};
         --font-heading-scale: {{ settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
