--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -1,3 +1,92 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .h0 {
+    @apply twcss-text-5xl;
+    /* font-size: calc(var(--font-heading-scale) * 4rem); */
+  }
+
+  @media only screen and (min-width: 750px) {
+    .h0 {
+      @apply twcss-text-5xl;
+      /* font-size: calc(var(--font-heading-scale) * 5.2rem); */
+    }
+  }
+
+  h1,
+  .h1 {
+    @apply twcss-text-5xl;
+    /* font-size: calc(var(--font-heading-scale) * 3rem); */
+  }
+
+  @media only screen and (min-width: 750px) {
+    h1,
+    .h1 {
+      @apply twcss-text-5xl;
+      /* font-size: calc(var(--font-heading-scale) * 4rem); */
+    }
+  }
+
+  h2,
+  .h2 {
+    @apply twcss-text-4xl;
+    /* font-size: calc(var(--font-heading-scale) * 2rem); */
+  }
+
+  @media only screen and (min-width: 750px) {
+    h2,
+    .h2 {
+      @apply twcss-text-4xl;
+      /* font-size: calc(var(--font-heading-scale) * 2.4rem); */
+    }
+  }
+
+  h3,
+  .h3 {
+    @apply twcss-text-3xl;
+    /* font-size: calc(var(--font-heading-scale) * 1.7rem); */
+  }
+
+  @media only screen and (min-width: 750px) {
+    h3,
+    .h3 {
+      @apply twcss-text-3xl;
+      /* font-size: calc(var(--font-heading-scale) * 1.8rem); */
+    }
+  }
+
+  h4,
+  .h4 {
+    font-family: var(--font-heading-family);
+    font-style: var(--font-heading-style);
+    @apply twcss-text-2xl;
+    /* font-size: calc(var(--font-heading-scale) * 1.5rem); */
+  }
+
+  h5,
+  .h5 {
+    @apply twcss-text-xl;
+    /* font-size: calc(var(--font-heading-scale) * 1.2rem); */
+  }
+
+  @media only screen and (min-width: 750px) {
+    h5,
+    .h5 {
+      @apply twcss-text-xl;
+      /* font-size: calc(var(--font-heading-scale) * 1.3rem); */
+    }
+  }
+
+  h6,
+  .h6 {
+    color: rgba(var(--color-foreground), 0.75);
+    margin-block-start: 1.67em;
+    margin-block-end: 1.67em;
+  }
+
+  body {
+    @apply twcss-text-base;
+  }
+}
