--- a/assets/app.css
+++ b/assets/app.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.9 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: #e5e7eb;
+  border-color: currentColor;
   /* 2 */
 }
 
@@ -211,8 +211,6 @@ textarea {
   /* 1 */
   line-height: inherit;
   /* 1 */
-  letter-spacing: inherit;
-  /* 1 */
   color: inherit;
   /* 1 */
   margin: 0;
@@ -236,9 +234,9 @@ select {
 */
 
 button,
-input:where([type='button']),
-input:where([type='reset']),
-input:where([type='submit']) {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -385,6 +383,13 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   /* 2 */
 }
 
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
+}
+
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -446,6 +451,95 @@ video {
   display: none;
 }
 
+.h0 {
+  font-size: 76.29px;
+  /* font-size: calc(var(--font-heading-scale) * 4rem); */
+}
+
+@media only screen and (min-width: 750px) {
+  .h0 {
+    font-size: 76.29px;
+    /* font-size: calc(var(--font-heading-scale) * 5.2rem); */
+  }
+}
+
+h1,
+  .h1 {
+  font-size: 76.29px;
+  /* font-size: calc(var(--font-heading-scale) * 3rem); */
+}
+
+@media only screen and (min-width: 750px) {
+  h1,
+    .h1 {
+    font-size: 76.29px;
+    /* font-size: calc(var(--font-heading-scale) * 4rem); */
+  }
+}
+
+h2,
+  .h2 {
+  font-size: 61.04px;
+  /* font-size: calc(var(--font-heading-scale) * 2rem); */
+}
+
+@media only screen and (min-width: 750px) {
+  h2,
+    .h2 {
+    font-size: 61.04px;
+    /* font-size: calc(var(--font-heading-scale) * 2.4rem); */
+  }
+}
+
+h3,
+  .h3 {
+  font-size: 48.83px;
+  /* font-size: calc(var(--font-heading-scale) * 1.7rem); */
+}
+
+@media only screen and (min-width: 750px) {
+  h3,
+    .h3 {
+    font-size: 48.83px;
+    /* font-size: calc(var(--font-heading-scale) * 1.8rem); */
+  }
+}
+
+h4,
+  .h4 {
+  font-family: var(--font-heading-family);
+  font-style: var(--font-heading-style);
+  font-size: 39.06px;
+  /* font-size: calc(var(--font-heading-scale) * 1.5rem); */
+}
+
+h5,
+  .h5 {
+  font-size: 31.25px;
+  /* font-size: calc(var(--font-heading-scale) * 1.2rem); */
+}
+
+@media only screen and (min-width: 750px) {
+  h5,
+    .h5 {
+    font-size: 31.25px;
+    /* font-size: calc(var(--font-heading-scale) * 1.3rem); */
+  }
+}
+
+h6,
+  .h6 {
+  color: rgba(var(--color-foreground), 0.75);
+  -webkit-margin-before: 1.67em;
+          margin-block-start: 1.67em;
+  -webkit-margin-after: 1.67em;
+          margin-block-end: 1.67em;
+}
+
+body {
+  font-size: 20px;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -494,10 +588,56 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
-  --tw-contain-size:  ;
-  --tw-contain-layout:  ;
-  --tw-contain-paint:  ;
-  --tw-contain-style:  ;
+}
+
+::-webkit-backdrop {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-gradient-from-position:  ;
+  --tw-gradient-via-position:  ;
+  --tw-gradient-to-position:  ;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
 }
 
 ::backdrop {
@@ -548,8 +688,165 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
-  --tw-contain-size:  ;
-  --tw-contain-layout:  ;
-  --tw-contain-paint:  ;
-  --tw-contain-style:  ;
+}
+
+.twcss-absolute {
+  position: absolute;
+}
+
+.twcss-relative {
+  position: relative;
+}
+
+.twcss-inset-0 {
+  inset: 0px;
+}
+
+.twcss-my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.twcss-mb-32 {
+  margin-bottom: 8rem;
+}
+
+.twcss-flex {
+  display: flex;
+}
+
+.twcss-grid {
+  display: grid;
+}
+
+.twcss-aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
+.twcss-h-9 {
+  height: 2.25rem;
+}
+
+.twcss-h-full {
+  height: 100%;
+}
+
+.twcss-w-\[24\%\] {
+  width: 24%;
+}
+
+.twcss-w-full {
+  width: 100%;
+}
+
+.twcss-flex-1 {
+  flex: 1 1 0%;
+}
+
+.twcss-flex-none {
+  flex: none;
+}
+
+.twcss-table-auto {
+  table-layout: auto;
+}
+
+.-twcss-rotate-2 {
+  --tw-rotate: -2deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.twcss-rotate-2 {
+  --tw-rotate: 2deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.twcss-grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.twcss-items-center {
+  align-items: center;
+}
+
+.twcss-justify-center {
+  justify-content: center;
+}
+
+.twcss-gap-32 {
+  gap: 8rem;
+}
+
+.twcss-gap-5 {
+  gap: 1.25rem;
+}
+
+.twcss-gap-8 {
+  gap: 2rem;
+}
+
+.twcss-gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.twcss-gap-y-10 {
+  row-gap: 2.5rem;
+}
+
+.twcss-gap-y-8 {
+  row-gap: 2rem;
+}
+
+.twcss-overflow-hidden {
+  overflow: hidden;
+}
+
+.twcss-rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.twcss-object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.twcss-py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.twcss-font-heading {
+  font-family: var(--font-heading-family);
+}
+
+@media not all and (min-width: 320px) {
+  .max-sm\:twcss-mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: 320px) {
+  .sm\:twcss-h-8 {
+    height: 2rem;
+  }
+
+  .sm\:twcss-gap-8 {
+    gap: 2rem;
+  }
+
+  .sm\:twcss-rounded-2xl {
+    border-radius: 1rem;
+  }
+}
+
+@media (min-width: 990px) {
+  .lg\:twcss-h-12 {
+    height: 3rem;
+  }
+
+  .lg\:twcss-grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 }
