--- a/assets/base.css
+++ b/assets/base.css
@@ -288,78 +288,6 @@ h5,
   }
 }
 
-.h0 {
-  font-size: calc(var(--font-heading-scale) * 4rem);
-}
-
-@media only screen and (min-width: 750px) {
-  .h0 {
-    font-size: calc(var(--font-heading-scale) * 5.2rem);
-  }
-}
-
-h1,
-.h1 {
-  font-size: calc(var(--font-heading-scale) * 3rem);
-}
-
-@media only screen and (min-width: 750px) {
-  h1,
-  .h1 {
-    font-size: calc(var(--font-heading-scale) * 4rem);
-  }
-}
-
-h2,
-.h2 {
-  font-size: calc(var(--font-heading-scale) * 2rem);
-}
-
-@media only screen and (min-width: 750px) {
-  h2,
-  .h2 {
-    font-size: calc(var(--font-heading-scale) * 2.4rem);
-  }
-}
-
-h3,
-.h3 {
-  font-size: calc(var(--font-heading-scale) * 1.7rem);
-}
-
-@media only screen and (min-width: 750px) {
-  h3,
-  .h3 {
-    font-size: calc(var(--font-heading-scale) * 1.8rem);
-  }
-}
-
-h4,
-.h4 {
-  font-family: var(--font-heading-family);
-  font-style: var(--font-heading-style);
-  font-size: calc(var(--font-heading-scale) * 1.5rem);
-}
-
-h5,
-.h5 {
-  font-size: calc(var(--font-heading-scale) * 1.2rem);
-}
-
-@media only screen and (min-width: 750px) {
-  h5,
-  .h5 {
-    font-size: calc(var(--font-heading-scale) * 1.3rem);
-  }
-}
-
-h6,
-.h6 {
-  color: rgba(var(--color-foreground), 0.75);
-  margin-block-start: 1.67em;
-  margin-block-end: 1.67em;
-}
-
 blockquote {
   font-style: italic;
   color: rgba(var(--color-foreground), 0.75);
@@ -398,7 +326,6 @@ blockquote {
 }
 
 .caption-with-letter-spacing--large {
-  font-size: 1.4rem;
   letter-spacing: 0.18rem;
 }
 
@@ -408,7 +335,6 @@ blockquote {
 .field__input,
 .form__label,
 .select__select {
-  font-size: 1.3rem;
   line-height: calc(1 + 0.5 / var(--font-body-scale));
   letter-spacing: 0.04rem;
 }
@@ -420,7 +346,7 @@ blockquote {
 table:not([class]) {
   table-layout: fixed;
   border-collapse: collapse;
-  font-size: 1.4rem;
+
   border-style: hidden;
   box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.2);
   /* draws the table border  */
@@ -496,7 +422,7 @@ h6:empty {
   text-underline-offset: 0.3rem;
   color: rgb(var(--color-link));
   background-color: transparent;
-  font-size: 1.4rem;
+
   font-family: inherit;
 }
 
@@ -510,7 +436,7 @@ h6:empty {
 
 .link-with-icon {
   display: inline-flex;
-  font-size: 1.4rem;
+
   font-weight: 600;
   letter-spacing: 0.1rem;
   text-decoration: none;
@@ -803,7 +729,7 @@ summary::-webkit-details-marker {
 @media screen and (min-width: 990px) {
   .title,
   .title-wrapper-with-link {
-    margin: 5rem 0 3rem;
+    margin: 5rem 0;
   }
 
   .title--primary {
@@ -856,7 +782,6 @@ summary::-webkit-details-marker {
 }
 
 .subtitle--small {
-  font-size: 1.4rem;
   letter-spacing: 0.1rem;
 }
 
@@ -1388,7 +1313,6 @@ button.shopify-payment-button__button--unbranded {
 }
 
 .share-button__button {
-  font-size: 1.4rem;
   display: flex;
   align-items: center;
   color: rgb(var(--color-link));
@@ -1830,7 +1754,7 @@ input[type='checkbox'] {
 .form__message {
   align-items: center;
   display: flex;
-  font-size: 1.4rem;
+
   line-height: 1;
   margin-top: 1rem;
 }
@@ -1840,7 +1764,6 @@ input[type='checkbox'] {
 }
 
 .customer .field .form__message {
-  font-size: 1.4rem;
   text-align: left;
 }
 
@@ -3006,8 +2929,8 @@ details-disclosure > details {
 
 .global-media-settings {
   position: relative;
-  border: var(--media-border-width) solid
-    rgba(var(--color-foreground), var(--media-border-opacity));
+  /* border: var(--media-border-width) solid
+    rgba(var(--color-foreground), var(--media-border-opacity)); */
   border-radius: var(--media-radius);
   overflow: visible !important;
   background-color: rgb(var(--color-background));
@@ -3053,6 +2976,9 @@ details-disclosure > details {
   border-radius: 0;
   border-left: none;
   border-right: none;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* check for flexbox gap in older Safari versions */
