--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -11,8 +11,8 @@
     }
   }
 {%- endstyle -%}
-<div class="color-{{ section.settings.color_scheme }} gradient">
-  <div class="section-{{ section.id }}-padding">
+<div class='color-{{ section.settings.color_scheme }} gradient'>
+  <div class='section-{{ section.id }}-padding'>
     {{ section.settings.custom_liquid }}
   </div>
 </div>
@@ -43,7 +43,7 @@
       "type": "range",
       "id": "padding_top",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_top",
@@ -53,7 +53,7 @@
       "type": "range",
       "id": "padding_bottom",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
