--- a/sections/main-login.liquid
+++ b/sections/main-login.liquid
@@ -18,8 +18,8 @@
   {%- assign hide_shop_login_button = true -%}
 {%- endif -%}
 
-<div class="customer login section-{{ section.id }}-padding">
-  <h1 id="recover" tabindex="-1">
+<div class='customer login section-{{ section.id }}-padding'>
+  <h1 id='recover' tabindex='-1'>
     {{ 'customer.recover_password.title' | t }}
   </h1>
   <div>
@@ -29,29 +29,29 @@
 
     {%- form 'recover_customer_password' -%}
       {% assign recover_success = form.posted_successfully? %}
-      <div class="field">
+      <div class='field'>
         <input
-          type="email"
-          value=""
-          name="email"
-          id="RecoverEmail"
-          autocorrect="off"
-          autocapitalize="off"
-          autocomplete="email"
+          type='email'
+          value=''
+          name='email'
+          id='RecoverEmail'
+          autocorrect='off'
+          autocapitalize='off'
+          autocomplete='email'
           {% if form.errors %}
-            aria-invalid="true"
-            aria-describedby="RecoverEmail-email-error"
+            aria-invalid='true'
+            aria-describedby='RecoverEmail-email-error'
             autofocus
           {% endif %}
-          placeholder="{{ 'customer.login_page.email' | t }}"
+          placeholder='{{ 'customer.login_page.email' | t }}'
         >
-        <label for="RecoverEmail">
+        <label for='RecoverEmail'>
           {{ 'customer.login_page.email' | t }}
         </label>
       </div>
       {%- if form.errors -%}
-        <small id="RecoverEmail-email-error" class="form__message">
-          <svg aria-hidden="true" focusable="false" viewBox="0 0 13 13">
+        <small id='RecoverEmail-email-error' class='form__message'>
+          <svg aria-hidden='true' focusable='false' viewBox='0 0 13 13'>
             <circle cx="6.5" cy="6.50049" r="5.5" stroke="white" stroke-width="2"/>
             <circle cx="6.5" cy="6.5" r="5.5" fill="#EB001B" stroke="#EB001B" stroke-width="0.7"/>
             <path d="M5.87413 3.52832L5.97439 7.57216H7.02713L7.12739 3.52832H5.87413ZM6.50076 9.66091C6.88091 9.66091 7.18169 9.37267 7.18169 9.00504C7.18169 8.63742 6.88091 8.34917 6.50076 8.34917C6.12061 8.34917 5.81982 8.63742 5.81982 9.00504C5.81982 9.37267 6.12061 9.66091 6.50076 9.66091Z" fill="white"/>
@@ -65,19 +65,19 @@
         {{ 'customer.login_page.submit' | t }}
       </button>
 
-      <a href="#login">
+      <a href='#login'>
         {{ 'customer.login_page.cancel' | t }}
       </a>
     {%- endform -%}
   </div>
 
-  <h1 id="login" tabindex="-1">
+  <h1 id='login' tabindex='-1'>
     {{ 'customer.login_page.title' | t }}
   </h1>
   <div>
     {%- if recover_success == true -%}
-      <h3 class="form__message" tabindex="-1" autofocus>
-        <svg aria-hidden="true" focusable="false" viewBox="0 0 13 13">
+      <h3 class='form__message' tabindex='-1' autofocus>
+        <svg aria-hidden='true' focusable='false' viewBox='0 0 13 13'>
           <path d="M6.5 12.35C9.73087 12.35 12.35 9.73086 12.35 6.5C12.35 3.26913 9.73087 0.65 6.5 0.65C3.26913 0.65 0.65 3.26913 0.65 6.5C0.65 9.73086 3.26913 12.35 6.5 12.35Z" fill="#428445" stroke="white" stroke-width="0.7"/>
           <path d="M5.53271 8.66357L9.25213 4.68197" stroke="white"/>
           <path d="M4.10645 6.7688L6.13766 8.62553" stroke="white">
@@ -87,9 +87,9 @@
     {%- endif -%}
     {%- form 'customer_login', novalidate: 'novalidate' -%}
       {%- if form.errors -%}
-        <h2 class="form__message" tabindex="-1" autofocus>
-          <span class="visually-hidden">{{ 'accessibility.error' | t }} </span>
-          <svg aria-hidden="true" focusable="false" viewBox="0 0 13 13">
+        <h2 class='form__message' tabindex='-1' autofocus>
+          <span class='visually-hidden'>{{ 'accessibility.error' | t }} </span>
+          <svg aria-hidden='true' focusable='false' viewBox='0 0 13 13'>
             <circle cx="6.5" cy="6.50049" r="5.5" stroke="white" stroke-width="2"/>
             <circle cx="6.5" cy="6.5" r="5.5" fill="#EB001B" stroke="#EB001B" stroke-width="0.7"/>
             <path d="M5.87413 3.52832L5.97439 7.57216H7.02713L7.12739 3.52832H5.87413ZM6.50076 9.66091C6.88091 9.66091 7.18169 9.37267 7.18169 9.00504C7.18169 8.63742 6.88091 8.34917 6.50076 8.34917C6.12061 8.34917 5.81982 8.63742 5.81982 9.00504C5.81982 9.37267 6.12061 9.66091 6.50076 9.66091Z" fill="white"/>
@@ -101,7 +101,7 @@
       {%- endif -%}
 
       {%- if shop.features.login_with_shop_classic_customer_accounts? -%}
-        <section name="sign-in-with-shop-provider">
+        <section name='sign-in-with-shop-provider'>
           {{ shop | login_button: hide_button: hide_shop_login_button }}
 
           {%- unless hide_shop_login_button -%}
@@ -112,43 +112,43 @@
         </section>
       {%- endif -%}
 
-      <div class="field">
+      <div class='field'>
         <input
-          type="email"
-          name="customer[email]"
-          id="CustomerEmail"
-          autocomplete="email"
-          autocorrect="off"
-          autocapitalize="off"
+          type='email'
+          name='customer[email]'
+          id='CustomerEmail'
+          autocomplete='email'
+          autocorrect='off'
+          autocapitalize='off'
           {% if form.errors contains 'form' %}
-            aria-invalid="true"
+            aria-invalid='true'
           {% endif %}
-          placeholder="{{ 'customer.login_page.email' | t }}"
+          placeholder='{{ 'customer.login_page.email' | t }}'
         >
-        <label for="CustomerEmail">
+        <label for='CustomerEmail'>
           {{ 'customer.login_page.email' | t }}
         </label>
       </div>
 
       {%- if form.password_needed -%}
-        <div class="field">
+        <div class='field'>
           <input
-            type="password"
-            value=""
-            name="customer[password]"
-            id="CustomerPassword"
-            autocomplete="current-password"
+            type='password'
+            value=''
+            name='customer[password]'
+            id='CustomerPassword'
+            autocomplete='current-password'
             {% if form.errors contains 'form' %}
-              aria-invalid="true"
+              aria-invalid='true'
             {% endif %}
-            placeholder="{{ 'customer.login_page.password' | t }}"
+            placeholder='{{ 'customer.login_page.password' | t }}'
           >
-          <label for="CustomerPassword">
+          <label for='CustomerPassword'>
             {{ 'customer.login_page.password' | t }}
           </label>
         </div>
 
-        <a href="#recover">
+        <a href='#recover'>
           {{ 'customer.login_page.forgot_password' | t }}
         </a>
       {%- endif -%}
@@ -157,7 +157,7 @@
         {{ 'customer.login_page.sign_in' | t }}
       </button>
 
-      <a href="{{ routes.account_register_url }}">
+      <a href='{{ routes.account_register_url }}'>
         {{ 'customer.login_page.create_account' | t }}
       </a>
     {%- endform -%}
@@ -195,7 +195,7 @@
       "type": "range",
       "id": "padding_top",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_top",
@@ -205,7 +205,7 @@
       "type": "range",
       "id": "padding_bottom",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
