--- a/sections/main-reset-password.liquid
+++ b/sections/main-reset-password.liquid
@@ -14,8 +14,8 @@
   }
 {%- endstyle -%}
 
-<div class="customer reset-password section-{{ section.id }}-padding">
-  <svg style="display: none">
+<div class='customer reset-password section-{{ section.id }}-padding'>
+  <svg style='display: none'>
     <symbol id="icon-error" viewBox="0 0 13 13">
       <circle cx="6.5" cy="6.50049" r="5.5" stroke="white" stroke-width="2"/>
       <circle cx="6.5" cy="6.5" r="5.5" fill="#EB001B" stroke="#EB001B" stroke-width="0.7"/>
@@ -31,9 +31,9 @@
   </p>
   {%- form 'reset_customer_password' -%}
     {%- if form.errors -%}
-      <h2 class="form__message" tabindex="-1" autofocus>
-        <span class="visually-hidden">{{ 'accessibility.error' | t }} </span>
-        <svg aria-hidden="true" focusable="false">
+      <h2 class='form__message' tabindex='-1' autofocus>
+        <span class='visually-hidden'>{{ 'accessibility.error' | t }} </span>
+        <svg aria-hidden='true' focusable='false'>
           <use href="#icon-error" />
         </svg>
         {{ 'templates.contact.form.error_heading' | t }}
@@ -44,7 +44,7 @@
             {%- if field == 'form' -%}
               {{ form.errors.messages[field] }}
             {%- else -%}
-              <a href="#{{ field }}">
+              <a href='#{{ field }}'>
                 {{ form.errors.translated_fields[field] | capitalize }}
                 {{ form.errors.messages[field] }}
               </a>
@@ -54,24 +54,24 @@
       </ul>
     {%- endif -%}
 
-    <div class="field">
+    <div class='field'>
       <input
-        type="password"
-        name="customer[password]"
-        id="password"
-        autocomplete="new-password"
+        type='password'
+        name='customer[password]'
+        id='password'
+        autocomplete='new-password'
         {% if form.errors contains 'password' %}
-          aria-invalid="true"
-          aria-describedby="password-error"
+          aria-invalid='true'
+          aria-describedby='password-error'
         {% endif %}
-        placeholder="{{ 'customer.reset_password.password' | t }}"
+        placeholder='{{ 'customer.reset_password.password' | t }}'
       >
-      <label for="password">
+      <label for='password'>
         {{ 'customer.reset_password.password' | t }}
       </label>
       {%- if form.errors contains 'password' -%}
-        <small id="password-error" class="form__message">
-          <svg aria-hidden="true" focusable="false">
+        <small id='password-error' class='form__message'>
+          <svg aria-hidden='true' focusable='false'>
             <use href="#icon-error" />
           </svg>
           {{ form.errors.translated_fields.password | capitalize }}
@@ -80,24 +80,24 @@
       {%- endif -%}
     </div>
 
-    <div class="field">
+    <div class='field'>
       <input
-        type="password"
-        name="customer[password_confirmation]"
-        id="password_confirmation"
-        autocomplete="new-password"
+        type='password'
+        name='customer[password_confirmation]'
+        id='password_confirmation'
+        autocomplete='new-password'
         {% if form.errors contains 'password_confirmation' %}
-          aria-invalid="true"
-          aria-describedby="password_confirmation-error"
+          aria-invalid='true'
+          aria-describedby='password_confirmation-error'
         {% endif %}
-        placeholder="{{ 'customer.reset_password.password_confirm' | t }}"
+        placeholder='{{ 'customer.reset_password.password_confirm' | t }}'
       >
-      <label for="password_confirmation">
+      <label for='password_confirmation'>
         {{ 'customer.reset_password.password_confirm' | t }}
       </label>
       {%- if form.errors contains 'password_confirmation' -%}
-        <small id="password_confirmation-error" class="form__message">
-          <svg aria-hidden="true" focusable="false">
+        <small id='password_confirmation-error' class='form__message'>
+          <svg aria-hidden='true' focusable='false'>
             <use href="#icon-error" />
           </svg>
           {{ form.errors.translated_fields.password_confirmation | capitalize }}
@@ -124,7 +124,7 @@
       "type": "range",
       "id": "padding_top",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_top",
@@ -134,7 +134,7 @@
       "type": "range",
       "id": "padding_bottom",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
