--- a/sections/quick-order-list.liquid
+++ b/sections/quick-order-list.liquid
@@ -2,9 +2,9 @@
 {{ 'quick-order-list.css' | asset_url | stylesheet_tag }}
 {{ 'quantity-popover.css' | asset_url | stylesheet_tag }}
 
-<script src="{{ 'quantity-popover.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'price-per-item.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'quick-order-list.js' | asset_url }}" defer="defer"></script>
+<script src='{{ 'quantity-popover.js' | asset_url }}' defer='defer'></script>
+<script src='{{ 'price-per-item.js' | asset_url }}' defer='defer'></script>
+<script src='{{ 'quick-order-list.js' | asset_url }}' defer='defer'></script>
 
 {%- style -%}
   .section-{{ section.id }}-padding {
@@ -60,7 +60,7 @@
       "type": "range",
       "id": "padding_top",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_top",
@@ -70,7 +70,7 @@
       "type": "range",
       "id": "padding_bottom",
       "min": 0,
-      "max": 100,
+      "max": 400,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
