--- a/sections/video.liquid
+++ b/sections/video.liquid
@@ -38,7 +38,7 @@
   {%- endif %}
 {%- endcapture -%}
 
-<div class='color-{{ section.settings.color_scheme }} gradient  1twcss-w-10/12 1twcss-mx-auto'>
+<div class='color-{{ section.settings.color_scheme }} gradient full-width-narrow'>
   <div class='video-section isolate{% unless section.settings.full_width %}  page-width{% endunless %} section-{{ section.id }}-padding'>
     <div
       {% if section.settings.full_width %}
