--- a/assets/app.css
+++ b/assets/app.css
@@ -729,6 +729,10 @@ strong {
   top: 2rem;
 }
 
+.twcss-top-48 {
+  top: 12rem;
+}
+
 .twcss-col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -776,6 +780,21 @@ strong {
 .twcss-my-40 {
   margin-top: 10rem;
   margin-bottom: 10rem;
+}
+
+.twcss-my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.twcss-my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.twcss-my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .twcss-mb-32 {
@@ -1081,8 +1100,37 @@ strong {
   padding-left: 4rem;
 }
 
+.twcss-pb-16 {
+  padding-bottom: 4rem;
+}
+
+.twcss-pt-16 {
+  padding-top: 4rem;
+}
+
+.twcss-pt-4 {
+  padding-top: 1rem;
+}
+
+.twcss-pt-48 {
+  padding-top: 12rem;
+}
+
 .twcss-font-heading {
   font-family: var(--font-heading-family);
+}
+
+.twcss-font-chaney {
+  font-family: CHANEY;
+}
+
+.twcss-font-black {
+  font-weight: 900;
+}
+
+.twcss-underline {
+  -webkit-text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 @media not all and (min-width: 320px) {
