--- a/sections/help-center.liquid
+++ b/sections/help-center.liquid
@@ -13,7 +13,7 @@
 {%- endstyle -%}
 
 <div class='color-{{ section.settings.color_scheme }} gradient'>
-  <div class='page-width isolate scroll-trigger animate--slide-in section-{{ section.id }}-padding twcss-grid twcss-gap-32'>
+  <div class='page-width isolate scroll-trigger animate--slide-in section-{{ section.id }}-padding'>
     {%- if section.settings.heading != blank -%}
       <h2 class='title title-wrapper--no-top-margin inline-richtext {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}'>
         {{ section.settings.heading }}
@@ -147,7 +147,7 @@
           "default": "question Title"
         },
         {
-          "type": "textarea",
+          "type": "inline_richtext",
           "id": "content",
           "label": "Answer Content",
           "default": "This is the content of the answer."
