--- a/assets/app.css
+++ b/assets/app.css
@@ -456,7 +456,7 @@ video {
 }
 
 .h0 {
-  font-size: 76.29px;
+  font-size: 40.55px;
   /* font-size: calc(var(--font-heading-scale) * 4rem); */
 }
 
@@ -469,7 +469,7 @@ video {
 
 h1,
 .h1 {
-  font-size: 76.29px;
+  font-size: 40.55px;
   /* font-size: calc(var(--font-heading-scale) * 3rem); */
 }
 
@@ -483,7 +483,7 @@ h1,
 
 h2,
 .h2 {
-  font-size: 61.04px;
+  font-size: 36.04px;
   /* font-size: calc(var(--font-heading-scale) * 2rem); */
 }
 
@@ -497,7 +497,7 @@ h2,
 
 h3,
 .h3 {
-  font-size: 48.83px;
+  font-size: 32.04px;
   /* font-size: calc(var(--font-heading-scale) * 1.7rem); */
 }
 
@@ -513,13 +513,13 @@ h4,
 .h4 {
   font-family: var(--font-heading-family);
   font-style: var(--font-heading-style);
-  font-size: 39.06px;
+  font-size: 28.48px;
   /* font-size: calc(var(--font-heading-scale) * 1.5rem); */
 }
 
 h5,
 .h5 {
-  font-size: 31.25px;
+  font-size: 25.31px;
   /* font-size: calc(var(--font-heading-scale) * 1.2rem); */
 }
 
@@ -708,53 +708,17 @@ strong {
   position: relative;
 }
 
-.twcss-sticky {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
 .twcss-inset-0 {
   inset: 0px;
 }
 
+.twcss-inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .twcss-top-0 {
   top: 0px;
-}
-
-.twcss-top-4 {
-  top: 1rem;
-}
-
-.twcss-top-8 {
-  top: 2rem;
-}
-
-.twcss-top-48 {
-  top: 12rem;
-}
-
-.twcss-col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
-.twcss-col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
-.twcss-col-span-6 {
-  grid-column: span 6 / span 6;
-}
-
-.twcss-col-span-4 {
-  grid-column: span 4 / span 4;
-}
-
-.twcss-col-span-8 {
-  grid-column: span 8 / span 8;
-}
-
-.twcss-col-span-9 {
-  grid-column: span 9 / span 9;
 }
 
 .twcss-my-auto {
@@ -762,43 +726,12 @@ strong {
   margin-bottom: auto;
 }
 
-.twcss-my-12 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
-.twcss-my-80 {
-  margin-top: 20rem;
-  margin-bottom: 20rem;
-}
-
-.twcss-my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.twcss-my-40 {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
-}
-
-.twcss-my-32 {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
-}
-
-.twcss-my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
-.twcss-my-16 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
 .twcss-mb-32 {
   margin-bottom: 8rem;
+}
+
+.twcss-mt-6 {
+  margin-top: 1.5rem;
 }
 
 .twcss-flex {
@@ -807,6 +740,14 @@ strong {
 
 .twcss-grid {
   display: grid;
+}
+
+.twcss-hidden {
+  display: none;
+}
+
+.twcss-aspect-\[9\/16\] {
+  aspect-ratio: 9/16;
 }
 
 .twcss-aspect-square {
@@ -821,20 +762,8 @@ strong {
   height: 100%;
 }
 
-.twcss-h-8 {
-  height: 2rem;
-}
-
-.twcss-h-80 {
-  height: 20rem;
-}
-
-.twcss-h-16 {
-  height: 4rem;
-}
-
-.twcss-h-96 {
-  height: 24rem;
+.twcss-w-2\/5 {
+  width: 40%;
 }
 
 .twcss-w-\[24\%\] {
@@ -853,8 +782,19 @@ strong {
   flex: none;
 }
 
+.twcss-shrink-0 {
+  flex-shrink: 0;
+}
+
 .twcss-table-auto {
   table-layout: auto;
+}
+
+.-twcss-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-twcss-rotate-2 {
@@ -871,48 +811,44 @@ strong {
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.twcss-grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.twcss-snap-start {
+  scroll-snap-align: start;
 }
 
-.twcss-grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.twcss-grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-
-.twcss-grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
-.twcss-grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
+.twcss-scroll-ml-\[var\(--scroll-padding\)\] {
+  scroll-margin-left: var(--scroll-padding);
 }
 
 .twcss-grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.twcss-grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.twcss-flex-col {
+  flex-direction: column;
+}
+
 .twcss-items-center {
   align-items: center;
+}
+
+.twcss-justify-end {
+  justify-content: flex-end;
 }
 
 .twcss-justify-center {
   justify-content: center;
 }
 
-.twcss-justify-between {
-  justify-content: space-between;
-}
-
 .twcss-gap-10 {
   gap: 2.5rem;
 }
 
-.twcss-gap-16 {
-  gap: 4rem;
+.twcss-gap-2 {
+  gap: 0.5rem;
 }
 
 .twcss-gap-32 {
@@ -925,26 +861,6 @@ strong {
 
 .twcss-gap-8 {
   gap: 2rem;
-}
-
-.twcss-gap-24 {
-  gap: 6rem;
-}
-
-.twcss-gap-4 {
-  gap: 1rem;
-}
-
-.twcss-gap-96 {
-  gap: 24rem;
-}
-
-.twcss-gap-40 {
-  gap: 10rem;
-}
-
-.twcss-gap-2 {
-  gap: 0.5rem;
 }
 
 .twcss-gap-x-8 {
@@ -960,94 +876,67 @@ strong {
   row-gap: 2rem;
 }
 
-.twcss-gap-x-6 {
-  -moz-column-gap: 1.5rem;
-  column-gap: 1.5rem;
-}
-
-.twcss-divide-x > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--tw-divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.twcss-divide-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(8px * var(--tw-divide-x-reverse));
-  border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.twcss-divide-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(4px * var(--tw-divide-x-reverse));
-  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.twcss-divide-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(2px * var(--tw-divide-x-reverse));
-  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.twcss-divide-y > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
-
-.twcss-divide-terra > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(167 140 89 / var(--tw-divide-opacity));
-}
-
-.twcss-divide-wintermorgen > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(234 237 242 / var(--tw-divide-opacity));
-}
-
-.twcss-self-start {
-  align-self: flex-start;
-}
-
 .twcss-overflow-hidden {
   overflow: hidden;
+}
+
+.twcss-rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .twcss-rounded-xl {
   border-radius: 0.75rem;
 }
 
-.twcss-border-r-2 {
-  border-right-width: 2px;
+.twcss-border-t {
+  border-top-width: 1px;
 }
 
-.twcss-border-l-2 {
-  border-left-width: 2px;
+.twcss-bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.twcss-border-r-terra {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(167 140 89 / var(--tw-border-opacity));
+.twcss-bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
-.twcss-border-r-wintermorgen {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(234 237 242 / var(--tw-border-opacity));
+.twcss-from-\[\#fff1be\] {
+  --tw-gradient-from: #fff1be var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 241 190 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.twcss-border-l-wintermorgen {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(234 237 242 / var(--tw-border-opacity));
+.twcss-from-terra {
+  --tw-gradient-from: #a78c59 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(167 140 89 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.twcss-bg-terra {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 140 89 / var(--tw-bg-opacity));
+.twcss-from-\[28\%\] {
+  --tw-gradient-from-position: 28%;
 }
 
-.twcss-bg-wintermorgen {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 237 242 / var(--tw-bg-opacity));
+.twcss-from-\[calc\(7\/16\*100\%\)\] {
+  --tw-gradient-from-position: calc(7 / 16 * 100%);
+}
+
+.twcss-via-\[\#ee87cb\] {
+  --tw-gradient-to: rgb(238 135 203 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from),
+    #ee87cb var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.twcss-via-\[70\%\] {
+  --tw-gradient-via-position: 70%;
+}
+
+.twcss-to-\[\#b060ff\] {
+  --tw-gradient-to: #b060ff var(--tw-gradient-to-position);
+}
+
+.twcss-bg-clip-text {
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 .twcss-object-cover {
@@ -1055,49 +944,13 @@ strong {
   object-fit: cover;
 }
 
-.twcss-p-16 {
-  padding: 4rem;
+.twcss-p-10 {
+  padding: 2.5rem;
 }
 
 .twcss-py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.twcss-py-96 {
-  padding-top: 24rem;
-  padding-bottom: 24rem;
-}
-
-.twcss-py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.twcss-py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.twcss-py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.twcss-pl-0 {
-  padding-left: 0px;
-}
-
-.twcss-pr-0 {
-  padding-right: 0px;
-}
-
-.twcss-pr-16 {
-  padding-right: 4rem;
-}
-
-.twcss-pl-16 {
-  padding-left: 4rem;
 }
 
 .twcss-pb-16 {
@@ -1108,29 +961,58 @@ strong {
   padding-top: 4rem;
 }
 
-.twcss-pt-4 {
-  padding-top: 1rem;
-}
-
-.twcss-pt-48 {
-  padding-top: 12rem;
+.twcss-pt-6 {
+  padding-top: 1.5rem;
 }
 
 .twcss-font-heading {
   font-family: var(--font-heading-family);
 }
 
-.twcss-font-chaney {
-  font-family: CHANEY;
+.twcss-text-sm\/6 {
+  font-size: 16px;
+  line-height: 1.5rem;
 }
 
-.twcss-font-black {
-  font-weight: 900;
+.twcss-text-xl\/7 {
+  font-size: 25.31px;
+  line-height: 1.75rem;
+}
+
+.twcss-font-medium {
+  font-weight: 500;
 }
 
 .twcss-underline {
   -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
+}
+
+.twcss-ring-1 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+}
+
+.twcss-ring-inset {
+  --tw-ring-inset: inset;
+}
+
+.twcss-ring-wintermorgen {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(234 237 242 / var(--tw-ring-opacity));
+}
+
+.\[--scroll-padding\:max\(theme\(spacing\.6\)\2c
+  calc\(\(100vw-theme\(maxWidth\.2xl\)\)\/2\)\)\] {
+  --scroll-padding: max(1.5rem, calc((100vw - 42rem) / 2));
+}
+
+.\[scrollbar-width\:none\] {
+  scrollbar-width: none;
 }
 
 @media not all and (min-width: 320px) {
@@ -1141,8 +1023,20 @@ strong {
 }
 
 @media (min-width: 320px) {
+  .sm\:twcss-hidden {
+    display: none;
+  }
+
+  .sm\:twcss-aspect-\[3\/4\] {
+    aspect-ratio: 3/4;
+  }
+
   .sm\:twcss-h-8 {
     height: 2rem;
+  }
+
+  .sm\:twcss-w-96 {
+    width: 24rem;
   }
 
   .sm\:twcss-gap-8 {
@@ -1151,6 +1045,69 @@ strong {
 
   .sm\:twcss-rounded-2xl {
     border-radius: 1rem;
+  }
+
+  .sm\:twcss-from-25\% {
+    --tw-gradient-from-position: 25%;
+  }
+}
+
+@media (min-width: 750px) {
+  .md\:twcss-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
+  .md\:twcss-top-8 {
+    top: 2rem;
+  }
+
+  .md\:twcss-col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
+  .md\:twcss-col-span-9 {
+    grid-column: span 9 / span 9;
+  }
+
+  .md\:twcss-block {
+    display: block;
+  }
+
+  .md\:twcss-grid {
+    display: grid;
+  }
+
+  .md\:twcss-grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
+  .md\:twcss-divide-x > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-x-reverse: 0;
+    border-right-width: calc(1px * var(--tw-divide-x-reverse));
+    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+  }
+
+  .md\:twcss-divide-wintermorgen > :not([hidden]) ~ :not([hidden]) {
+    --tw-divide-opacity: 1;
+    border-color: rgb(234 237 242 / var(--tw-divide-opacity));
+  }
+
+  .md\:twcss-self-start {
+    align-self: flex-start;
+  }
+
+  .md\:twcss-py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .md\:twcss-pl-16 {
+    padding-left: 4rem;
+  }
+
+  .md\:twcss-pr-16 {
+    padding-right: 4rem;
   }
 }
 
@@ -1161,5 +1118,10 @@ strong {
 
   .lg\:twcss-grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:\[--scroll-padding\:max\(theme\(spacing\.8\)\2c
+    calc\(\(100vw-theme\(maxWidth\.7xl\)\)\/2\)\)\] {
+    --scroll-padding: max(2rem, calc((100vw - 80rem) / 2));
   }
 }
